<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VPlan</string>
    <string name="app_copyright">&#169; Jannik Bamberger 2012 &#8211; 2016</string>
    <string name="app_credits">
        Alle Angaben ohne Gewähr.\n\n
        In der Anwendung werden Daten der Website fhg-radolfzell.de verarbeitet und angezeigt.\n\n
        Die Anwendung enthält Ressourcen die durch das Android Asset Studio von Roman Nurik generiert wurden. Sie sind unter der Creative Commons Lizenz v3.0 lizensiert. \n\n
        Verwendete Bibliotheken:\n\n
        <b>jsoup</b>\n
        MIT license\n
        &#169; 2009 &#8211; 2014 Jonathan Hedley (jonathan@hedley.net)\n\n
        <b>GSON</b>\n
        Apache 2.0 license\n
        &#169; 2008 Google Inc.\n\n
        <b>org.apache.commons.lang3</b>\n
        Apache 2.0 license\n
        &#169; The Apache Foundation
    </string>

    <string name="action_classic_view">Website anzeigen</string>
    <string name="action_credits">Credits</string>
    <string name="action_bug">Fehler melden</string>
    <string name="action_feedback">Feedback/Frage</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_set_grade">Klasse einstellen</string>
    <string name="action_get_version">Version anzeigen</string>
    <string name="action_force_reload">Aktualisieren</string>
    <string name="action_contact_developer">Entwickler kontaktieren</string>
    <string name="action_contact_mail">Mail an FHG schreiben</string>
    <string name="action_contact_phone">FHG Anrufen</string>
    <string name="action_contact_navigate">Navigation zum FHG</string>
    <string name="action_contact_full">FHG Kontaktdaten</string>

    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="select_all">Alle anzeigen</string>
    <string name="mail_developer">dev.jbamberger@gmail.com</string>

    <string name="text_motd">Nachrichten zum Tag</string>
    <string name="text_dialog_contact_developer">Grund der Kontaktaufnahme</string>
    <string name="text_dialog_pick_grade">Anzuzeigende Klassen</string>
    <string name="text_vplan_omitted">entfällt</string>
    <string name="text_vplan_motd">Nachrichten zum Tag</string>
    <string name="text_network_disconnected">Bitte eine Internetverbindung herstellen.</string>
    <string name="text_no_vplan">VPlan konnte nicht geladen werden.</string>
    <string name="text_subject_question">[FHG-App] question</string>
    <string name="text_subject_feedback">[FHG-App] feedback</string>
    <string name="text_subject_bug">[FHG-App] bug</string>
    <string name="text_subject_general">[FHG-App] general</string>
    <string name="text_write_mail">Mail schreiben</string>
    <string name="text_call">Anrufen</string>
    <string name="text_showing_all">Alles wird angezeigt.</string>
    <string name="text_no_warranty">Alle Angaben ohne Gewähr.</string>
    <string name="text_loading_failed">Fehler beim Laden.</string>

    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_credits">Credits</string>

    <string name="title_fragment_vplan">Vertretungsplan</string>
    <string name="title_fragment_fhg_feed">FHG Feed</string>
    <string name="title_fragment_contact">Kontakt</string>
    <string name="title_fragment_credits">Credits</string>
    <string name="title_fragment_settings">Einstellungen</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="text_fhg_logo_description">Logo des FHG Radolfzell</string>
    <string name="text_fhg_name">Friedrich-Hecker-Gymnasium</string>
    <string name="text_fhg_contact_mail">mailto:schule@fhg-radolfzell.de</string>
    <string name="text_fhg_contact_phone">tel:0049773294780</string>
    <string name="text_fhg_contact">
        Friedrich-Hecker-Gymnasium\n
        Markelfinger Str. 15\n
        D – 78315 Radolfzell\n
        Tel: +49 (0) 77 32 / 94 78 0\n
        Fax: +49 (0) 77 32 / 94 78 99\n
        E-Mail: schule@fhg-radolfzell.de
    </string>
    <string name="text_fhg_contact_condensed">
        Friedrich-Hecker-Gymnasium\n
        Markelfinger Str. 15\n
        D - 78315 Radolfzell
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_experiments">ExperimentsActivity</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>

    <string name="post_info">Von %1$s am %2$s.</string>

</resources>
