<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_force_reload"
        android:icon="@drawable/ic_action_navigation_refresh"
        android:orderInCategory="95"
        android:title="@string/action_force_reload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_set_grade"
        android:orderInCategory="96"
        android:title="@string/action_set_grade"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact_developer"
        android:orderInCategory="98"
        android:title="@string/action_contact_developer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_credits"
        android:orderInCategory="101"
        android:title="@string/action_credits"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
</menu>
