<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_vplan"
            android:icon="@drawable/ic_action_events"
            android:orderInCategory="10"
            android:title="@string/title_fragment_vplan" />
        <item
            android:id="@+id/drawer_fhg_feed"
            android:icon="@drawable/ic_action_feed"
            android:orderInCategory="20"
            android:title="@string/title_fragment_fhg_feed" />
        <!--<item
            android:id="@+id/drawer_contact"
            android:icon="@drawable/ic_action_contact"
            android:orderInCategory="30"
            android:title="@string/title_fragment_contact" />-->
        <item
            android:id="@+id/drawer_credits"
            android:icon="@drawable/ic_action_info"
            android:orderInCategory="40"
            android:title="@string/title_fragment_credits" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_action_settings"
            android:orderInCategory="50"
            android:title="@string/title_fragment_settings" />
    </group>

</menu>
